# auto-futures-trading-machine

./: .coverage  .coveragerc  .env.example  .gitignore  ALLINONE_CONTROLLER_GUIDE.md  ARCHITECTURE.md  CLASS_DESIGN_GUIDE.md  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  README_GATEWAY.md  SECURITY_WARNING.md  app.py  app_gui.py  config.py  coverage.xml  equity_log.csv  pyproject.toml  qodana.yaml  run_order_executor.py  run_order_executor_gateway.py  run_strategy.py  test_dll_decoupling.py  test_exchange_switching_simple.py  test_gateway_integration.py
.cursor/rules/: python.mdc
.github/badges/: coverage.json  pylint.json
.github/workflows/: badges.yml  ci.yaml  ci.yml  code_quality.yml  update_graph.yaml
archived/: INTEGRATION_GUIDE.md  README.md
archived/docs/: ARCHITECTURE_IMPROVEMENTS.md  DOCUMENTATION_OVERVIEW.md  TECHNICAL_MIGRATION_PLAN.md
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_OVERVIEW.md  CONFIG_GUIDE.md  DOCUMENTATION_OVERVIEW.md  README.md  REFACTORING.md  REFACTORING_GATEWAY.md  ROADMAP.md  ZeroMQ_Design_Decisions.md  get_position_controller.md
docs/api/: README.md
docs/architecture/: CLASS_DESIGN_GUIDE.md  DETAILED_FLOW_DIAGRAMS.md  DLL_DECOUPLING_REFACTORING.md  DLL_PORTING_GUIDE.md  EVENT_DRIVEN_DESIGN.md  REFACTORING_STORY.md  SERVICECONTAINER_ARCHITECTURE_UPDATE.md
docs/archived/: CI_CD_BADGES.md  CI_CD_BADGES_README.md  DEPRECATED_CODE_NOTICE.md  test_run_gateway_use_case.py
docs/decisions/: 000-template.md  0006-session-json-file-repository.md  001-high-frequency-trading-optimization.md  001-use-zeromq-for-ipc.md  002-refactor-event-driven-solid-and-resilience.md  003-condition-repository-implementation.md  004-dll-gateway-centralization.md  005-gateway-naming-consolidation.md
docs/getting-started/: FIRST_TRADE.md  INSTALLATION.md  (+1 more)
process/: run_order_executor.py  run_order_executor_gateway.py
scripts/: generate_badges.py  generate_equity_chart.py  plot_equity.py
src/: conftest.py
tests/: test_all_in_one_controller.py  test_application_bootstrapper.py  test_cli_application.py  test_simulator_adapter.py  test_system_manager.py
(+267 files in other folders)
