[tool.poetry]
name = "pfcf-com"
version = "0.1.0"
description = ""
authors = ["Justin Xiao <o927416847@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dotenv = "^1.0.1"
cerberus = "^1.3.5"
pythonnet = "^3.0.5"
pyzmq = "^26.4.0"
msgpack = "^1.1.0"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-cover = "^3.0.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 100

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 100
# https://beta.ruff.rs/docs/rules/
select = ["E", "W", "F"]
ignore = ["F401", "F403", "E402", "E501"]
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
ignore-init-module-imports = true

[tool.mypy]
ignore_missing_imports = true